--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,17 @@ body {
     font-family: "Inter", sans-serif;
     font-size: 16px;
     font-weight: 400;
+    line-height: 1.3;
+}
+
+html, body {
+    height: 100%;
+}
+
+.wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
@@ -29,13 +40,14 @@ a {
     color: inherit;
 }
 
+/* HEADER */
 .header {
     background-color: #151515;
 }
 
-.header-main {
-    /* background-color: transparent; */
-}
+/* .header-main {
+    background-color: transparent;
+}  */
 
 .header__inner {
     display: flex;
@@ -54,4 +66,52 @@ a {
     text-transform: uppercase;
     color: #fff;
     font-weight: 700;
+}
+
+/* MAIN */
+
+.main {
+    flex-grow: 1;
+}
+
+/* FOOTER */
+.footer {
+    background-color: #151515;
+    color: #fff;
+    padding: 50px 0 32px;
+}
+
+.footer__menu {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 50px;
+}
+
+.footer__menu-title {
+    font-size: 24px;
+    font-weight: 700;
+    padding-bottom: 20px;
+}
+
+.footer__menu-item + .footer__menu-item {
+    padding-top: 20px;
+}
+
+.app {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-bottom: 52px;
+}
+
+.footer__copy {
+    min-width: 800px;
+    margin: 0 auto 30px;
+    text-align: center;
+}
+
+.copy__nav-list {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
 }
