--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,15 @@ a {
 /* HEADER */
 .header {
     background-color: #151515;
+    position: absolute;
+    z-index: 5;
+    left: 0;
+    right: 0;
 }
 
-/* .header-main {
+.header-main {
     background-color: transparent;
-}  */
+} 
 
 .header__inner {
     display: flex;
@@ -72,6 +76,73 @@ a {
 
 .main {
     flex-grow: 1;
+}
+
+.top {
+    color:#fff;
+    text-align: center;
+    position: absolute;
+    z-index: 5;
+    left: 0;
+    right: 0;
+}
+
+.title {
+    padding-top: 250px;
+    padding-bottom: 40px;
+    font-size: 96px;
+    font-weight: 700;
+}
+
+.top__link {
+    background-color: #151515;
+    font-weight: 700;
+    font-size: 36px;
+    display: inline-block;
+    padding: 23px;
+    min-width: 430px;
+    text-transform: uppercase;
+}
+
+.swiper-slide {
+    height: 100vh;
+    background-size: cover; /* Масштабирует изображение так, чтобы оно полностью покрывало контейнер */
+    background-position: center; /* Центрирует изображение внутри контейнера */
+    background-repeat: no-repeat; /* Избегает повторения изображения */
+    position: center center;
+}
+
+.swiper::after {
+    content: '';
+    background: rgba(21, 21, 21, .5);
+    position: absolute;
+    z-index: 5;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+
+}
+
+.swiper-pagination-bullet {
+    width: 120px;
+    height: 3px;
+    background-color: #151515;
+    border-radius: 0;
+    opacity: 1;
+    margin: 0 15px !important;
+}
+
+.swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom {
+    bottom: 50px;
+}
+
+
+
+.swiper-pagination-bullet-active {
+    width: 120px;
+    height: 6px;
+    background-color: #fff;
 }
 
 /* FOOTER */
