--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,17 @@ ul{
     list-style: none;
     
 }
+
 a {
     text-decoration: none;
     color: inherit;
+}
+
+.section-title {
+    margin-bottom: 50px;
+    font-size: 48px;
+    font-weight: 700;
+    text-align: center;
 }
 
 /* HEADER */
@@ -121,7 +129,6 @@ a {
     top: 0;
     right: 0;
     left: 0;
-
 }
 
 .swiper-pagination-bullet {
@@ -136,8 +143,6 @@ a {
 .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom {
     bottom: 50px;
 }
-
-
 
 .swiper-pagination-bullet-active {
     width: 120px;
@@ -185,4 +190,30 @@ a {
     display: flex;
     justify-content: center;
     gap: 40px;
+}
+
+/* SECTION WHY LEASE */
+.why-lease {
+    padding: 150px 0;
+}
+
+.why-lease__list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+    text-align: center;
+}
+
+.why-lease__item-img {
+    margin-bottom: 30px;
+}
+
+.why-lease__item-title {
+    margin-bottom: 30px;
+    font-style: 24px;
+    font-weight: 700;
+}
+
+.why-lease__item-text {
+    text-align: left;
 }
