--- a/css/style.css
+++ b/css/style.css
@@ -318,3 +318,84 @@ a {
 .important-things__list-img {
     padding-bottom: 20px;
 }
+
+
+
+/* CONTACTS PAGE */
+.contacts-page header {
+    position: relative;
+    z-index: 1;  /* Обеспечивает, что текст в section будет ниже по уровню */
+}
+
+.contacts {
+    padding: 100px 0 150px;
+}
+
+.contacts-title {
+    margin-bottom: 20px;
+}
+
+.contects-text {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 24px;
+    text-align: center;
+    padding: 0 100px;
+}
+
+.form {
+    max-width: 580px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
+
+.form___input {
+    padding: 18px 20px;
+    width: 270px;
+    display: inline-block;
+    border: 1px solid #0066FF;
+    margin-bottom: 50px;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.3;
+}
+
+.form___input::placeholder, .form__textarea::placeholder {
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.3;
+    color: #000;
+    opacity: 0.5;
+}
+
+.form__textarea {
+    width: 100%;
+    resize: none;
+    border: 1px solid #0066FF;
+    margin-bottom: 50px;
+    height: 291px;
+    padding: 28px 20px;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.3;
+    color: #000;
+}
+
+.form-btn {
+    margin: 0 auto 150px;
+    padding: 13px 61px;
+    width: 184px;
+    height: 47px;
+    background-color: #151515;
+    color: #fff;
+    text-transform: uppercase;
+    font-family: "Inter", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+}
