--- a/css/style.css
+++ b/css/style.css
@@ -498,10 +498,13 @@ a {
 }
 
 .tabs__content-item {
-    display: grid;
+    display: none;
     grid-template-columns: repeat(4, 1fr);
     gap: 100px 40px;
+}
 
+.tabs__content-item.tabs__content-item--active {
+    display: grid;
 }
 
 .card {
